<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Study Partner</string>
    <string name="made_in_india">Made in India</string>
    <string name="splash_screen_logo_cd">Application Logo</string>
    <string name="on_boarding_screen_next">Next</string>
    <string name="on_boarding_screen_back">Back</string>
    <string name="on_boarding_screen_get_started">Get Started</string>
    <string name="on_boarding_screen_item_image_cd">On Boarding Screen Item Image</string>
    <string name="on_boarding_screen_skip">Skip</string>
    <string name="login_screen_welcome_back">Welcome Back</string>
    <string name="login_screen_bg_rectangle_cd">Login Screen Background Rectangle</string>
    <string name="login_screen_join_community">Join our community of brilliant students</string>
    <string name="login_screen_email">Email</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_title">Login</string>
    <string name="login_screen_remember_me">Remember Me</string>
    <string name="login_screen_forgot_password">Forgot Password?</string>
    <string name="login_screen_create_account">Create an Account</string>
    <string name="login_screen_google_sign_in">Sign in with Google</string>
    <string name="create_account_screen_background_cd">Create Account Screen Background Rectangle</string>
    <string name="create_account_screen_welcome">Welcome</string>
    <string name="create_account_screen_title">Create Account</string>
    <string name="create_account_screen_terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="create_account_screen_confirm_password">Confirm Password</string>
    <string name="create_account_screen_password">Password</string>
    <string name="create_account_screen_email">Email</string>
    <string name="create_account_screen_username">Username</string>
    <string name="create_account_screen_login_instead">Login Instead</string>
    <string name="create_account_screen_full_name">Full Name</string>
    <string name="create_account_screen_back_arrow_cd">Back arrow to login page</string>
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_notes">Notes</string>
    <string name="bottom_navigation_menu_attendance">Attendance</string>
    <string name="bottom_navigation_menu_starred">Starred</string>
    <string name="navigation_menu_reminders">Reminders</string>
    <string name="navigation_menu_profile">Profile</string>
    <string name="navigation_menu_logout">Logout</string>
    <string name="navigation_menu_settings">Settings</string>
    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_feedback">Feedback</string>
    <string name="navigation_menu_report_bug">Report Bug</string>
    <string name="navigation_menu_about_us">About Us</string>
    <string name="profile_screen_full_name">Full Name</string>
    <string name="profile_screen_username">Username</string>
    <string name="profile_screen_email">New Email</string>
    <string name="profile_screen_password">Password</string>
    <string name="profile_screen_update_profile">Update Profile</string>
    <string name="profile_screen_update_email">Update Email</string>
    <string name="profile_screen_old_password">Old Password</string>
    <string name="profile_screen_new_password">New Password</string>
    <string name="profile_screen_confirm_password">Confirm Password</string>
    <string name="profile_screen_update_password">Update Password</string>
    <string name="profile_screen_delete_account">Delete Account</string>
    <string name="profile_screen_user_photo_cd">User Profile Image</string>
    <string name="profile_screen_user_profile_camera_cd">User Profile Image Camera</string>
    <string name="hello_blank_fragment">Oops, it\'s embarrassing this screen is not yet made</string>
    <string name="attendance_item_plus">+</string>
    <string name="attendance_item_minus">-</string>
    <string name="attendance_item_attended">Attended: %1$d</string>
    <string name="attendance_item_missed">Missed: %1$d</string>
    <string name="attendance_item_empty_percentage">---</string>
    <string name="attendance_item_need_to_attend" tools:ignore="PluralsCandidate">"You need to attend %1$d more class%2$s"</string>
    <string name="attendance_item_you_can_miss" tools:ignore="PluralsCandidate">"You can miss %1$d class%2$s"</string>
    <string name="attendance_item_cannot_miss">You cannot miss any classes</string>
    <string name="attendance_item_edit_button">Attendance Item Edit Button</string>
    <string name="attendance_item_delete_button">Attendance Item Delete Button</string>
    <string name="attendance_item_subject_name_change">Enter the subject name</string>
    <string name="attendance_item_subject">Subject</string>
    <string name="attendance_item_subject_ok">OK</string>
    <string name="attendance_item_subject_cancel">Cancel</string>
    <string name="attendance_update">Update</string>
    <string name="attendance_on_track">You did it, you are right on track!</string>
    <string name="attendance_not_on_track">You need to buckle up!</string>
    <string name="attendance_no_classes">Let\'s attend classes!</string>
    <string name="attendance_add">ADD</string>
    <string name="attendance_background_rectangle_cd">Attendance Background Rectangle</string>
    <string name="attendance_empty">It\'s too empty in here</string>
    <string name="attendance_empty_add_subs">Add your subjects and never miss any exam</string>
    <string name="attendance_empty_icon_cd">Empty Attendance Icon</string>
    <string name="attendance_required_name">Name</string>
    <string name="attendance_minimum_attendance_criteria">Minimum Attendance Criteria</string>
    <string name="attendance_default_required_attendance">75%</string>
    <string name="attendance_percentage">%1$s%%</string>
    <string name="file_type_image_cd">File Type Image</string>
    <string name="file_options_cd">Options</string>
    <string name="file_sort_button_cd">Sort Button</string>
    <string name="file_background_rectangle_cd">Background Rectangle Image</string>
    <string name="file_sort_order_cd">Sort Order</string>
    <string name="file_empty_icon_cd">File Empty Icon</string>
    <string name="file_empty">No items</string>
    <string name="file_action_deleted">File deleted</string>
    <string name="starred_file_deleted">Starred file deleted</string>
    <string name="multiple_files_deleted">Selected files deleted</string>
    <string name="notes_action_delete">Delete</string>
    <string name="notes_action_unstar">Unstar</string>
    <string name="notes_action_select_all">Select All</string>
    <string name="notes_action_share">Share</string>
    <string name="notes_action_undo">UNDO</string>
    <string name="notes_action_deleted">Folder deleted</string>
    <string name="multiple_folders_deleted">Selected folders deleted</string>
    <string name="notes_empty_icon_cd">Notes Empty Icon</string>
    <string name="notes_empty">No subjects stored</string>
    <string name="notes_empty_sub">Click on the plus icon to get started</string>
    <string name="bottom_sheet_new_folder">New Folder</string>
    <string name="bottom_sheet_file">File</string>
    <string name="bottom_sheet_video">Video</string>
    <string name="bottom_sheet_image">Image</string>
    <string name="bottom_sheet_camera">Camera</string>
    <string name="bottom_sheet_note">Text</string>
    <string name="bottom_sheet_link">Link</string>
    <string name="bottom_sheet_audio">Audio</string>
    <string name="bottom_sheet_record">Record</string>
    <string name="notes_item_menu_rename">Rename</string>
    <string name="notes_item_menu_delete">Delete</string>
    <string name="notes_item_menu_share">Share</string>
    <string name="notes_item_menu_star">Star</string>
    <string name="notes_item_menu_unstar">Unstar</string>
    <string name="notes_menu_search">Search</string>
    <string name="notes_menu_refresh">Refresh</string>
    <string name="sort_by_title">Sort By</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_date_created">Date Created</string>
    <string name="sort_by_last_modified">Last Modified</string>
    <string name="sort_by_ok">OK</string>
    <string name="sort_by_cancel">Cancel</string>
    <string name="notes_add_note_name">Name</string>
    <string name="notes_add_note_content">Content</string>
    <string name="notes_add_note_ok">OK</string>
    <string name="notes_add_note_cancel">Cancel</string>
    <string name="notes_add_link_title">Enter Link</string>
    <string name="notes_add_link_ok">OK</string>
    <string name="notes_add_link_cancel">Cancel</string>
    <string name="starred_empty_icon_cd">Starred Empty Icon</string>
    <string name="starred_empty">Star important files to view them quickly</string>
    <string name="starred_empty_sub">To star a file click on its options menu</string>
    <string name="calendar_icon_cd">Calendar Icon</string>
    <string name="time_icon_cd">Time Icon</string>
    <string name="alarm_icon_cd">Alarm Icon</string>
    <string name="delete_icon_cd">Delete</string>
    <string name="reminder_empty_icon_cd">Reminder Empty Icon</string>
    <string name="reminder_empty">Add reminders and never miss any event</string>
    <string name="reminder_dialog_desc">Description</string>
    <string name="reminder_dialog_title">Title</string>
    <string name="home_empty_icon_cd">Home Empty Icon</string>
    <string name="home_empty">Add notes to view them here</string>
    <string name="home_carousel_reminder_cd">Home Carousel Reminder</string>
    <string name="home_carousel_no_reminders">You have no reminders</string>
    <string name="home_carousel_add_reminders">Click here to add reminders</string>
    <string name="home_carousel_high_attendance_congratulations">Congratulations</string>
    <string name="home_carousel_high_attendance_high_attendance">You have high attendance in all subjects</string>
    <string name="home_carousel_no_attendance">You have no subjects added</string>
    <string name="home_carousel_add_attendance">Add subjects to view their attendance here</string>
    <string name="home_carousel_no_classes_attended">You haven\'t attended any classes yet</string>
    <string name="home_carousel_attend_classes">Attend Classes</string>
    <string name="home_images">Images</string>
    <string name="home_documents">Documents</string>
    <string name="home_videos">Videos</string>
    <string name="home_recents">RECENTS</string>
    <string name="home_media_item_cd">Home Media Item</string>
    <string name="about_us_text">An Application developed to help students with their daily school/college activities. This application will store all your notes, attendance, reminders in a single place and you won\'t have to install multiple applications for each individual task.</string>
    <string name="about_us_subtext">A goal to help Students worldwide we have made this application to be available for free.</string>
    <string name="about_us_team">TEAM</string>
    <string name="about_us_github_icon">Github Icon</string>
    <string name="about_us_linked_in_icon">LinkedIn Icon</string>
    <string name="about_us_contact_us">CONTACT US</string>
    <string name="team_karanveer_singh">Karanveer Singh</string>
    <string name="team_designer_amp_developer"><![CDATA[Designer & Developer]]></string>
    <string name="team_saket_agarwal">Saket Agarwal</string>
    <string name="team_developer">Lead Developer</string>
    <string name="team_karan_gourisaria">Karan Gourisaria</string>
    <string name="logout_alert_dialog_yes">YES</string>
    <string name="logout_alert_dialog_no">NO</string>
    <string name="logout_alert_dialog_subtitle">Are you sure you want to logout?</string>
</resources>