<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/bottomNavigationViewMenuHome"
            android:title="@string/bottom_navigation_menu_home"
            android:icon="@drawable/home_icon"
            app:showAsAction="always" />

        <item android:id="@+id/bottomNavigationViewMenuNotes"
            android:title="@string/bottom_navigation_menu_notes"
            android:icon="@drawable/notes_icon"
            app:showAsAction="always" />

        <item
            android:id="@+id/itemEmpty"
            android:title=""/>

        <item android:id="@+id/bottomNavigationViewMenuAttendence"
            android:title="@string/bottom_navigation_menu_attendance"
            android:icon="@drawable/attendance_icon"
            app:showAsAction="always"/>

        <item android:id="@+id/bottomNavigationMenuStarred"
            android:title="@string/bottom_navigation_menu_starred"
            android:icon="@drawable/starred_icon"
            app:showAsAction="always"/>

    </group>
</menu>