<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.studypartner.fragments.HomeFragment"
        android:label="@string/navigation_menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.studypartner.fragments.AttendanceFragment"
        android:label="@string/bottom_navigation_menu_attendance"
        tools:layout="@layout/fragment_attendance" >
        <action
            android:id="@+id/action_nav_attendance_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_starred"
        android:name="com.studypartner.fragments.StarredFragment"
        android:label="@string/bottom_navigation_menu_starred"
        tools:layout="@layout/fragment_starred" >
        <action
            android:id="@+id/action_nav_starred_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.studypartner.fragments.ReminderFragment"
        android:label="@string/navigation_menu_reminders"
        tools:layout="@layout/fragment_reminder" >
        <action
            android:id="@+id/action_nav_reminder_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.studypartner.fragments.ProfileFragment"
        android:label="@string/navigation_menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.studypartner.fragments.SettingsFragment"
        android:label="@string/navigation_menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <activity
        android:id="@+id/nav_logout"
        android:name="com.studypartner.activities.LoginActivity"
        android:label="@string/navigation_menu_logout"
        tools:layout="@layout/activity_login"/>
    <navigation android:id="@+id/nestednav_notes"
        app:startDestination="@id/nav_notes">
        <fragment
            android:id="@+id/nav_notes"
            android:name="com.studypartner.fragments.NotesFragment"
            android:label="@string/bottom_navigation_menu_notes"
            tools:layout="@layout/fragment_notes">

            <action
                android:id="@+id/action_nav_notes_to_nav_home"
                app:destination="@id/nav_home"
                app:enterAnim="@anim/slide_in_left"
                app:exitAnim="@anim/slide_out_right"
                app:popUpTo="@id/nav_home"
                app:popUpToInclusive="true" />
            <action
                android:id="@+id/action_nav_notes_to_basicNotesFragment"
                app:destination="@id/basicNotesFragment" />
        </fragment>
        <fragment
            android:id="@+id/basicNotesFragment"
            android:name="com.studypartner.fragments.BasicNotesFragment"
            tools:layout="@layout/fragment_basic_notes">
            <argument
                android:name="FileDes"
                app:argType="com.studypartner.models.FileItem" />
        </fragment>
    </navigation>

</navigation>